--- a/lab2/notebooks/lab2_pricing_houses.ipynb
+++ b/lab2/notebooks/lab2_pricing_houses.ipynb
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1867,6 +1867,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KAREN [0.53271229]\n"
+     ]
     }
    ],
    "source": [
@@ -1882,7 +1889,7 @@
     "plt.xticks(())\n",
     "plt.yticks(())\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -2092,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -2103,6 +2110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "KAREN [0.53271229]\n",
       "Variance score of : 0.31\n",
       "Variance score of : 0.31\n"
      ]
@@ -2123,7 +2131,7 @@
        "['reg_decisiontreereg_hw1.pkl']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,6 +2150,8 @@
     "\n",
     "# Fit\n",
     "reg_dt.fit(x_train, y_train)\n",
+    "samplePredict = [[4, 2.5, 3005, 15, 17903.0, 1]]\n",
+    "print('KAREN', reg_dt.predict(samplePredict))\n",
     "\n",
     "# Predictions\n",
     "# y_pred_dt = cross_val_score(reg_dt, x_train, np.ravel(y_train))\n",
